# esp_cam_io_parl

./: CMakeLists.txt  Kconfig  README.md  idf_component.yml  library.json
driver/: esp_cam_io_parl.c  esp_camera_sensor.c  sccb.c  sensor.c  xclk.c
driver/include/: esp_cam_io_parl.h  esp_camera_sensor.h  sccb.h  sensor.h  xclk.h
examples/simple_camera_stream_example/: CMakeLists.txt  README.md
examples/simple_camera_stream_example/main/: idf_component.yml  main.c
sensors/: ov2640.c  ov3660.c  ov5640.c
sensors/private_include/: ov2640.h  ov2640_settings.h  ov3660.h  ov3660_settings.h  ov5640.h  ov5640_regs.h  ov5640_settings.h
